# Recurse into the subdirectories
ADD_SUBDIRECTORY (External_libs)
ADD_SUBDIRECTORY (Fortran_libraries)
ADD_SUBDIRECTORY (C_libraries)
ADD_SUBDIRECTORY (programs)

# Add Library references
ADD_LIBRARY(calypso ${CALYPSO_CORE_SRC_FILES} ${CALYPSO_MHD_SRC_FILES} ${CALYPSO_PARALLEL_SRC_FILES} ${CALYPSO_SOLVER_SRC_FILES} ${CALYPSO_UTILS_SRC_FILES})

IF (FFTW_FOUND)
    TARGET_LINK_LIBRARIES(calypso ${FFTW_LIBRARIES})
ENDIF (FFTW_FOUND)

IF (HDF5_FOUND AND HDF5_IS_PARALLEL)
    TARGET_LINK_LIBRARIES(calypso ${HDF5_hdf5_fortran_LIBRARY} ${HDF5_hdf5_LIBRARY} -lz)
ENDIF(HDF5_FOUND AND HDF5_IS_PARALLEL)

IF (ZLIB_FOUND)
    TARGET_LINK_LIBRARIES(calypso ${ZLIB_LIBRARIES})
ENDIF (ZLIB_FOUND)

TARGET_LINK_LIBRARIES(calypso ${MPI_Fortran_LIBRARIES})

