# Set subdirectory
ADD_SUBDIRECTORY (GLSL)

# Set include directory
INCLUDE_DIRECTORIES(CORE_C CONTROLS GLSL KEMO_GL KEMO_GLUT GTK)

# Define source files and its subdirectories
FILE(GLOB BASE_C_INCLUDE_FILES CORE_C/*.h)
FILE(GLOB BASE_C_SRC_FILES     CORE_C/*.c)

FILE(GLOB CONTROLS_C_INCLUDE_FILES CONTROLS/*.h)
FILE(GLOB CONTROLS_C_SRC_FILES CONTROLS/*.c)

FILE(GLOB GLSL_C_INCLUDE_FILES   GLSL/*.h)
FILE(GLOB GLSL_C_SRC_FILES       GLSL/*.c)

FILE(GLOB KEMO_GL_INCLUDE_FILES KEMO_GL/*.h)
FILE(GLOB KEMO_GL_SRC_FILES     KEMO_GL/*.c)

FILE(GLOB KEMO_GLUT_INCLUDE_FILES KEMO_GLUT/*.h)
FILE(GLOB KEMO_GLUT_SRC_FILES     KEMO_GLUT/*.c)

FILE(GLOB KEMO_GTK_INCLUDE_FILES GTK/*.h)
FILE(GLOB KEMO_GTK_SRC_FILES     GTK/*.c)

SET(CALYPSO_C_INCLUDE_FILES ${BASE_C_INCLUDE_FILES} ${CONTROLS_C_INCLUDE_FILES} ${GLSL_C_INCLUDE_FILES} ${KEMO_GL_INCLUDE_FILES} ${KEMO_GLUT_INCLUDE_FILES} ${KEMO_GTK_INCLUDE_FILES})
SET(CALYPSO_C_SRC_FILES ${BASE_C_SRC_FILES} ${CONTROLS_C_SRC_FILES} ${GLSL_C_SRC_FILES} ${KEMO_GL_SRC_FILES} ${KEMO_GLUT_SRC_FILES} ${KEMO_GTK_SRC_FILES})

# Add Library references
ADD_LIBRARY(calypsoview ${CALYPSO_C_SRC_FILES} ${CALYPSO_C_INCLUDE_FILES})

