# Define source files for GLSL
FILE(GLOB LIST RELATIVE GLSL_VERTEX_FILES   *.vert)
FILE(GLOB LIST RELATIVE GLSL_FRAGMENT_FILES *.frag)

SET(GLSL_C_PREFIX       shaders)

SET(MAKE_C_SHADER       shader_into_c)

message(STATUS "Aho ${CMAKE_CURRENT_SOURCE_DIR}")

ADD_EXECUTABLE(${MAKE_C_SHADER} ${MAKE_C_SHADER}.f90)

add_custom_command(
  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
  OUTPUT ${GLSL_C_PREFIX}.h ${GLSL_C_PREFIX}.c
  DEPENDS ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${MAKE_C_SHADER} ${GLSL_VERTEX_FILES} ${GLSL_FRAGMENT_FILES}
  COMMAND "pwd"
  COMMAND "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${MAKE_C_SHADER}" "${GLSL_C_PREFIX}" "${CMAKE_CURRENT_SOURCE_DIR}" "${GLSL_VERTEX_FILES}" "${GLSL_VERTEX_FILES}"
)
