SET(SRC_KEMOVIEW_GLFW kemoviewer_glfw_gtk.c kemo_mesh_viewer_glfw_gtk.c)
ADD_EXECUTABLE(CalypsoView_GLFW ${SRC_KEMOVIEW_GLFW})

SET(CALYPSOVIEW_LIBRARIES ${GLFW_LIBRARIES} ${GTK3_LIBRARIES} ${PNG_LIBRARIES} ${ZLIB_LIBRARIES} ${OPENGL_LIBRARIES})
TARGET_LINK_LIBRARIES(CalypsoView_GLFW calypsoview ${CALYPSOVIEW_LIBRARIES})
INCLUDE_DIRECTORIES(../../C_src/CORE_C ../../C_src/CONTROLS ../../C_src/GLSL ../../C_src/KEMO_GL ../../C_src/KEMO_GLUT ../../C_src/GTK)

